apps/hello/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    pod-security.kubernetes.io/enforce: restricted
